# cellsnp-lite

./: .gitignore  .readthedocs.yaml  .travis.yml  Makefile  Makefile.am  README.rst  ax_with_htslib.m4  cellsnp.c  cellsnp_util.h  configure.ac  general_util.h  new_release.md  setup.py  thpool.c
autom4te.cache/: requests
cellSNP/: __init__.py  cellSNP.py  sparseVCF.py
cellSNP/utils/: base_utils.py  base_utils.pyx  cellsnp_utils.pxd  cellsnp_utils.pyx  pileup_regions.py  pileup_regions.pyx  pileup_utils.pxd  pileup_utils.py  pileup_utils.pyx  run_utils.py  vcf_utils.py  vcf_utils.pyx
doc/: FAQ.rst  acknowledgement.rst  citation.rst  conf.py  index.rst  install.rst  manual.rst  release.rst  snp_list.rst  speed.rst
docs/: Makefile  TODO.md  conf.py  index.rst  sphinx_requirements.txt
docs/deprecated/: hdf5.rst
docs/main/: FAQ.rst  about.rst  acknowledgement.rst  brief_introduction.rst  citation.rst  data.rst  history.rst  install.rst  manual.rst  news.rst  release.rst
docs/tables/: cellsnp-lite_modes.csv  cellsnp-lite_options_for_various_omics.csv
liftOver/: README.md  liftOver_vcf.py
scripts/: SNPlist_1Kgenome.sh
scripts/benchmark/: README.md
scripts/benchmark/data/bm1_demux/: demux.B.barcodes.400.tsv  demux.B.barcodes.tsv  demux.B.lite.bam  demux.B.lite.bam.bai  demux.B.merged.bam  demux.B.merged.bam.bai  info
scripts/benchmark/data/bm1_demux/scripts/: base_utils.sh  pre_filter_vcf.sh
scripts/benchmark/data/bm1_soupc/: cellranger.hg19.3.0.0.fa.fai  soupc.bam  soupc.bam.bai  soupc.barcodes.tsv
scripts/benchmark/data/bm3_carde/: bam.lst  cellranger.hg19.3.0.0.fa  sample.lst
scripts/benchmark/run/bm1/: mode1.sh  mode1_analysis.sh  multi_core_mode1.sh  run_bm1_demux.sh  run_bm1_demux_analysis.sh  run_bm1_soupc.sh  run_bm1_soupc_analysis.sh
scripts/benchmark/run/bm2/: mode2.sh  multi_core_mode2.sh  run_bm2_soupc.sh
scripts/benchmark/run/bm2/pr/: cmp_gt.awk  gl2gq.awk  mode2_analysis.sh  mode2a_pre.sh  pl2gq.awk  pr.py  pr2.py  run_bm2_soupc_analysis.sh
scripts/benchmark/run/bm2_bm1/: bm2_bm1_analysis.sh  csp2mtx.sh  csp2mtx2.py  run_bm2_bm1_soupc_a.qsub.sh  run_bm2_soupc.qsub.sh
scripts/benchmark/run/bm2_bm3/: bm2_bm3.sh  multi_bm2_bm3.sh  run_bm2_bm3_fb.sh
scripts/benchmark/run/bm2_bm3/chrom/: chrom_analysis.sh  run_chrom_analysis.sh
scripts/benchmark/run/bm2_bm3/snp/: csp2mtx.py  csp2mtx.sh  run_snp_analysis.sh  snp_analysis.sh
scripts/benchmark/run/bm3/: analysis_accu.sh  bcf2mtx.sh  csp2mtx_noN.py  mode3.sh  mode3_analysis.sh  multi_core_mode3.sh  run_bm3_fb.sh  run_bm3_fb_analysis.sh
scripts/benchmark/run/carde_hg19/: sam2bam.sh  star_aln.sh  star_index.sh
scripts/benchmark/run/soupc_hg19/: rename.sh  run_cellranger.qsub.sh
scripts/benchmark/run_supp/demuxlet/: pileup_mode1_p16.sh  pileup_mode1_p32.sh  pileup_mode1_p8.sh
scripts/benchmark/run_supp/souporcell/: pileup_mode1_p16.sh  pileup_mode1_p32.sh  pileup_mode1_p8.sh
scripts/benchmark/run_supp/srr/: genotype_mode2.sh  pileup_mode1.sh
scripts/benchmark/scripts/bm/: analysis_accu.sh  bcf2depth.py  bcf2mtx.py  csp2depth.py  csp2mtx.py  get_ref_mtx.r  match_snp_index.r  merge_snp.r  plot_accuracy.r  plot_performance.r  update_mtx_snp_index.r
scripts/benchmark/scripts/utils/: base_utils.r  base_utils.sh  csp_utils.sh  diff_cellSNP.sh  get_git_last_commit.sh  memusg  memusg_utils.sh  merge_perf.sh  mtx_utils.r  qsub.temp.sh  run.temp.sh
scripts/liftOver/: README.rst  check_vcf.py  liftOver_vcf.py
scripts/post_hoc/: README.md  csp_utils.py  subset_with_minAD_issue108.ipynb
scripts/utils/: README.md  csp_utils.R
scripts/utils/csp_mode1/: cellSNP.samples.tsv  cellSNP.tag.AD.mtx  cellSNP.tag.DP.mtx  cellSNP.tag.OTH.mtx
src/: .nfs000000b10010b21500000044  .nfs000000b10013487900000043  biods.h  cellsnp.c  config.h  csp.c  csp.h  csp_fetch.c  csp_pileup.c  default.h  jfile.c  jfile.h  jmemory.h  jmempool.h  jnumeric.h  jsam.c  jsam.h  jstring.c  jstring.h  kvec.h  mplp.c  mplp.h  snp.c  snp.h  thpool.c  thpool.h  thread.c  thread.h
test/: README.rst  VCF_convert.py  data_maker_10x.sh  test.sh  test_10x.sh
tests/: README.rst
